[tool.poetry]
name = "RF-devices"
version = "0.1.0"
description = "Data analysis and instrument control (SMC100A + DPO2012) for GKP experiments"
authors = ["Jeremy Metzner <jmetzne@phys.ethz.ch>"]
readme = "README.md"
packages = [{ include = "instruments.py" }]

[tool.poetry.dependencies]
python = "^3.10"
pyvisa = "^1.14.1"
pyusb = "^1.3.1"
rsinstrument = "^1.122.0"
numpy = ">=1.26,<2.0"
dwfpy = "^1.2.0"
matplotlib = "^3.10.8"

[tool.poetry.group.dev.dependencies]
ipython = "^8.0.0"
jupyterlab = "^4.0.0"
notebook = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


